# cosmwasm-count-contract

./: .gitignore  Cargo.toml  README.md  cosmwasm_test.sh
.cargo/: config
schema/: empty-contract.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_hello.json  response_to_value.json
src/: contract.rs  lib.rs  msg.rs  state.rs
