[package]
name = "hello_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = "1.4.1"
cw-storage-plus = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.17.0"
